--- a/globals.css
+++ b/globals.css
@@ -2,12 +2,18 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Poppins';
+  font-family: 'Pretendard-Regular';
   
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
 }
 
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
 
 @font-face {
   font-family: 'Poppins';
