--- a/globals.css
+++ b/globals.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: 'Pretendard-Regular';
-  
+  background-color: #767676;
   /* font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif; */
 }
@@ -14,42 +14,3 @@ body {
   font-weight: 400;
   font-style: normal;
 }
-
-@font-face {
-  font-family: 'Poppins';
-  src: url('./public/fonts/Poppins/Poppins-Regular.ttf');
-  font-weight: 400;
-  font-style: normal;
-}
-@font-face {
-    font-family: 'Poppins';
-    src: url('./public/fonts/Poppins/Poppins-Medium.ttf');
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-@font-face {
-  font-family: 'Poppins';
-  src: url('./public/fonts/Poppins/Poppins-SemiBold.ttf');
-  font-weight: 600;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Poppins';
-  src: url('./public/fonts/Poppins/Poppins-Bold.ttf');
-  font-weight: 700;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Poppins';
-  src: url('./public/fonts/Poppins/Poppins-ExtraBold.ttf');
-  font-weight: 800;
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Poppins';
-  src: url('./public/fonts/Poppins/Poppins-Black.ttf');
-  font-weight: 900;
-  font-style: normal;
-}
-
